packages/@winglang/wingc/src/lsp/snapshots/hovers/parent_class_docs_are_inherited_on_call.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nnew(): Child\n```\n---\nSome parent docs"
range:
  start:
    line: 11
    character: 4
  end:
    line: 11
    character: 9

