packages/@winglang/wingc/src/lsp/snapshots/hovers/parent_class_docs_are_inherited_on_method_call.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\npreflight method(): void\n```\n---\nSome method docs"
range:
  start:
    line: 8
    character: 6
  end:
    line: 8
    character: 12

