packages/@winglang/wingc/src/lsp/snapshots/hovers/static_method.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstatic preflight my(a: str, b: bool): str\n```"
range:
  start:
    line: 5
    character: 4
  end:
    line: 5
    character: 6

