packages/@winglang/wingc/src/lsp/snapshots/hovers/static_method_root.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Json {\n  asBool(): bool;\n  asNum(): num;\n  asStr(): str;\n  get(...): Json;\n  getAt(...): Json;\n  has(...): bool;\n  /* ... */\n}\n```\n---\nImmutable Json."
range:
  start:
    line: 1
    character: 0
  end:
    line: 1
    character: 4

