packages/@winglang/wingc/src/lsp/snapshots/hovers/struct_field_doc.snap
---
source: libs/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nfield: num\n```\n---\nStruct field doc"
range:
  start:
    line: 3
    character: 4
  end:
    line: 3
    character: 9

