packages/@winglang/wingc/src/lsp/snapshots/hovers/user_defined_type_annotation.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo {\n  // No public members\n}\n```"
range:
  start:
    line: 2
    character: 7
  end:
    line: 2
    character: 10

