packages/@winglang/wingc/src/lsp/snapshots/hovers/user_defined_type_reference_property.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nstatic preflight static_method(): void\n```"
range:
  start:
    line: 4
    character: 4
  end:
    line: 4
    character: 17

