packages/@winglang/wingc/src/lsp/snapshots/hovers/user_defined_type_reference_type.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo {\n  // No public members\n}\n```"
range:
  start:
    line: 4
    character: 0
  end:
    line: 4
    character: 3

