packages/@winglang/wingc/src/lsp/snapshots/hovers/user_defined_types.snap
---
source: packages/@winglang/wingc/src/lsp/hover.rs
---
contents:
  kind: markdown
  value: "```wing\nclass Foo {\n  // No public members\n}\n```\n---\nShared behavior between all Wing SDK resources.\n\n*@noinflight*"
range:
  start:
    line: 1
    character: 6
  end:
    line: 1
    character: 9

